--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -33,7 +33,11 @@
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
 </div>
-
+<div>
+    <form action="/checkout">
+        <button>checkOut</button>
+    </form>
+</div>
 <div class="container">
     <div class="card">
         <strong th:text="${category.name}">Category Title</strong>
