--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -31,7 +31,7 @@
 <body>
 
 <div class="jumbotron text-center">
-    <h1>Codecool Shop</h1>
+    <img class="logo" src="/static/img/twitter_header_photo_2.png" alt="">
 </div>
 <div>
     <form action="/checkout">
