--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -35,7 +35,7 @@
 </div>
 <div>
     <form action="/checkout">
-        <button>checkOut</button>
+        <button id="checkout-button">checkOut</button>
     </form>
 </div>
 <div class="container">
