--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="/static/css/checkout.css">
-    <script type="text/javascript" src="/static/js/modal_button.js" defer></script>
+    <script type="text/javascript" src="/static/js/checkout_page.js" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -66,11 +66,12 @@
                     <script id="paypal-button">paypal.Buttons({
                         onInit: function(data, actions) {
                             // Disable the buttons
-                            actions.disable();
+                            //actions.disable();
+                            actions.enable();
 
-                            if (document.getElementById("paypal-container").className == "enabled") {
-                                actions.enable();
-                            }
+                            // if (document.getElementById("paypal-container").className == "enabled") {
+                            //     actions.enable();
+                            // }
                         }
                     }).render('#paypal-container');</script>
                     <!-- The Modal -->
