--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -66,3 +66,20 @@
     /*margin-bottom: ;*/
     width: 100%;
 }
+
+
+#checkout-button {
+    margin-left: 95rem;
+}
+
+.supplier {
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.supplier:active {
+    border-color: transparent;
+}
