--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -29,18 +29,48 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-<div class="jumbotron text-center">
-    <img class="logo" src="/static/img/twitter_header_photo_2.png" alt="">
-</div>
-<div>
-    <form action="/checkout">
-        <button>checkOut</button>
-    </form>
-</div>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Supplier</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <form class="dropdown-item" action="/" method="GET" name="supplier">
+                            <button class="supplier" type="submit" name="supplier" value="Amazon">Amazon</button>
+                        </form>
+                        <form class="dropdown-item" action="/" method="GET" name="supplier">
+                            <button class="supplier" type="submit" name="supplier" value="Lenovo">Lenovo</button>
+                        </form>
+                    </div>
+
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Category</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                        <a class="dropdown-item" href="#">Laptop</a>
+                        <a class="dropdown-item" href="#">Phone</a>
+                        <a class="dropdown-item" href="#">Tablet</a>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Reset filters</a>
+                </div>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link" id="checkout-button" href="/checkout">Checkout</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div class="container">
     <div class="card">
-        <strong th:text="${category.name}">Category Title</strong>
+        <strong th:text="${category.name} + s">Category Title</strong>
     </div>
 
     <div id="products" class="row">
