--- a/src/main/webapp/templates/product/payment.html
+++ b/src/main/webapp/templates/product/payment.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>
 </head>
 <body>
-PAYMENT WAS SUCCESSFUL
+<div class="payment-page">
+    <h2 class="payment-was-successful">Your payment has been processed successfully</h2>
+    <h1 class="any-question">Any question?</h1>
+</div>
 </body>
 </html>
