--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -137,3 +137,21 @@
 .nav-item {
     margin-top: 4px;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+}
+
+.payment-page {
+    text-align: center;
+    margin-top: 3rem;
+    font-size: 2rem;
+}
+
+.payment-was-successful {
+    color: green;
+}
