--- a/src/main/webapp/templates/footer.html
+++ b/src/main/webapp/templates/footer.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<div th:fragment="copy">
+<div th:fragment="copy" class="footer">
     <div class="card">
         <div class="card-body">
-            &copy; 2016 Codecool Budapest
+            &copy; 2019 BruShop Budapest
         </div>
     </div>
 </div>
