--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -29,6 +29,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>
+    <script type="text/javascript" src="/static/js/signup_login.js" defer></script>
 </head>
 
 <body>
@@ -63,12 +64,54 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="cart-logo" href="/cart"><i class="fa fa-shopping-cart"><span class="badge" th:text="${numOfOrder}">0</span></i></a>
+                <a class="nav-link" id="cart-logo" href="/cart"><i class="fa fa-shopping-cart"><span class="badge"
+                                                                                                     th:text="${numOfOrder}">0</span></i></a>
             </li>
             <li class="nav-item">
                 <div>
                     <a class="nav-link" id="checkout-button" href="/checkout">Checkout</a>
                 </div>
+            </li>
+            <li class="nav-item">
+                <div class="container">
+                    <!-- Button to Open the Modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                        Sign Up
+                    </button>
+                    <!-- The Modal -->
+                    <div class="modal" id="myModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <br>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <!-- Modal body -->
+                                <div class="modal-body">
+                                    <div class="col-50" id="registration-content">
+                                        <h3>Sign Up</h3>
+                                        <br>
+                                        <form action="/" method="post">
+                                        <p><input type="text" class="username" name="username"
+                                                  placeholder="Username"></p>
+                                        <p><input type="text" class="email" name="email"
+                                                  placeholder="Email"></p>
+                                        <p><input type="password" class="password" name="password"
+                                                  placeholder="Password"></p>
+                                        <p><input type="password" class="confirm-password"
+                                                  placeholder="Confirm Password"></p>
+                                        <br>
+                                        <button id="modal-button" type="submit" class="btn btn-danger">Sign Up</button>
+                                        </form>
+
+                                        <div>
+
+                                            <hr>
+                                            <p id="already-have-account">Already have an account? Log in.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </li>
         </ul>
     </div>
